tests/golden/type_errors/array_filter_generic_callback.cd
fun predicate<T>(value: number): bool {
  return true;
}
filter([1], predicate);
