tests/golden/type_errors/array_filter_generic_callback.err
Type error at 4:22: filter cannot infer type parameter T
  filter([1], predicate);
                       ^
